# aptly-api-client

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements-test.txt  setup.py  tox.ini
.github/workflows/: test.yml
aptly_api/: __init__.py  base.py  client.py  repos.py
aptly_api/parts/: __init__.py  files.py  mirrors.py  misc.py  packages.py  publish.py  repos.py  snapshots.py
aptly_api/tests/: __init__.py  base.py  client.py  files.py  misc.py  packages.py  publish.py  repos.py  snapshots.py  test_client.py  test_files.py  test_mirrors.py  test_misc.py  test_packages.py  test_publish.py  test_repos.py  test_snapshots.py
aptly_api/tests/test_data/: metrics.txt
