[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aptly-api-client-fork"
dynamic = ["version"]
description = "A Python 3 client for the Aptly API with support for mirrors"
readme = "README.rst"
license = ""
authors = [
    { name = "Gregory Land (@GregoryLand)", email = "landjgregory@gmail.com" },
    { name = "Jonas Maurus (@jdelic)", email = "jonas@gopythongo.com" },
]
maintainers = [
    { name = "Gregory Land", email = "landjgregory@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
]
# intentionally unpinned. We're a library, so we don't need to conflict with others by pinning versions
# and we don't depend on a specific minimum version.
dependencies = [
    "iso8601",
    "requests",
]

[tool.hatch.version]
path = "./aptly_api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "aptly_api",
]

[tool.hatch.envs.hatch-test]
default-args = []
dependencies = [
    "requests-mock==1.12.1",
    "coverage==7.6.0",
    "coveralls==4.0.1",
    "flake8==7.1.0",
    "pep257==0.7.0",
    "doc8==1.1.1",
    "Pygments==2.18.0",
    "mypy==1.10.1",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "./",
]
testpaths = [
    "aptly_api/tests/",
]

