[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aptly-api-client-fork"
dynamic = ["version"]
description = "A Python 3 client for the Aptly API with support for mirrors"
readme = "README.rst"
license = ""
authors = [
    { name = "Gregory Land (@GregoryLand)", email = "landjgregory@gmail.com" },
    { name = "Jonas Maurus (@jdelic)", email = "jonas@gopythongo.com" },
]
maintainers = [
    { name = "Gregory Land", email = "landjgregory@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
]
# intentionally unpinned. We're a library, so we don't need to conflict with others by pinning versions
# and we don't depend on a specific minimum version.
dependencies = [
    "iso8601",
    "requests",
]

[tool.hatch.version]
path = "./aptly_api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "aptly_api",
]

[tool.hatch.envs.hatch-test]
default-args = []
dependencies = [
    "requests-mock==1.12.1",
    "pep257==0.7.0",
    "doc8==1.1.1",
    "Pygments==2.18.0",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "./",
]
testpaths = [
    "aptly_api/tests/",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "PT009",
    "PT027",
    "ARG002",
    "SLF001",
    "UP031",
    "FA100",
    "FBT001",
    "FBT002",
    "PERF401",
    "EM101",
    "TRY003",
    "TRY302",
    "A002",
    "RET505",
    "PLC0414",
    "N818",
    "SIM108",
    "PLR2004",
    "B007",
    "SIM115",
    "UP009",
    "UP014",
    "I001",
]

[tool.hatch.envs.mypy]
detatched = true
dependencies = [
    "mypy==1.10.1"
]

[tool.hatch.envs.mypy.scripts]
type-check = "mypy --install-types --non-interactive -p aptly_api"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_calls = true
disallow_untyped_defs  = true

